# cpreproc

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: cpreproc.hpp  cpreproc_context.hpp  cpreproc_eval.hpp  cpreproc_loc.hpp  ppr.hpp  ppr_common.hpp  ppr_context.hpp  ppr_eval_type.hpp  ppr_loc.hpp  ppr_macroctx.hpp  ppr_sink.hpp  ppr_token.hpp  ppr_tokenizer.hpp  ppr_transform.hpp
include/detail/: ppr_eval.yy  ppr_sink.hxx  ppr_tokenizer.hxx  ppr_tokenizer.l  ppr_transform.hxx
src/: cpreproc_cond.l  cpreproc_cond.yy  cpreproc_lex.l  ppr_context.cpp  ppr_eval.yy  ppr_macroctx.cpp  ppr_sink.cpp  ppr_tokenizer.cpp  ppr_tokenizer.cxx  ppr_tokenizer.l  ppr_transform.cpp  ppr_transform.cxx
unit_tests/: test.cpp
unit_tests/datasets/: basic.txt  basic2.txt  basic3.txt  basic4.txt  macro1.txt  macro2.txt  multiline.txt  test.h
unit_tests/references/: basic.txt  basic2.txt  basic3.txt  basic4.txt  macro1.txt  macro2.txt  multiline.txt  test.h
utility/: tokenizer_util.cpp  transform_util.cpp
